# LevelScope

./: CMakeLists.txt  gitignore
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VolumeHistoryComponent.cpp  VolumeHistoryComponent.h
